
origin/master

  (none)



3.0.8        2014-02-01                                    runtime 20150201

  [ENHANCMENTS]

  - New `augeas.exists?` opcode
    Like the 20150119 opcode `augeas.find`, except that it has no output
    parameter and therefore does no heap-allocation.

  - Introduce proper JSON and XML/CDATA escaping in mesh output routines



3.0.7        2014-02-01                                    runtime 20150131

  [ENHANCEMENTS]

  - Set a umask in cogd
    cogd now sets a more sane umask, which can be specified via a new
    configuration directive, 'umask'.  Defaults to 0022.

  - pn --output flag
    The pn utility, in assembler (-S) mode, now supports -o / --output
    for specifying where to write the pendulum bytecode image.  This allows
    callers to short-circuit the auto-naming ("just add .S") logic, and was
    needed to support VPATH builds in automake.

  - New clockwork.* facts
    The new clockwork.version, clockwork.runtime and clockwork.protocol
    facts can be used to query for version (x.y.z), runtime (YYYYMMDD) and
    network protocol version (N) in play.

  - New `runtime` opcode for determining version of Pendulum runtime
    The runtime version will be set to date of finalization of new
    instruction set prior to release.  This means the each runtime version
    is a fixed specification of interface (but not necessarily behavior),
    and pendulum code can use this new opcode to determine if the runtime is
    new enough before using new opcodes.

  - New `fs.mkparent` opcode
    Intelligently creates missing parent directories of its first argument,
    using the ownership and mode of the closest existing ancestor directory.
    This emulates pre-3.0 Clockwork behavior that was missed during the
    conversion to the register machine implementation.

  - Better error / output handling from `localsys` in stdlib.pn

  [BUG FIXES]

  - Memory leaks plugged